# pat

./: README.rst  pat.py  pyproject.toml  tests.py
