[tool.poetry]
name = "pat"
version = "0.1.0"
description = "Parsable Templates for Python"
authors = ["Dan Bradham <danielbradham@gmail.com>"]
license = "MIT"
repository = "https://github.com/danbradham/pat"

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
